validation of html files

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>Using your energy audit information through our program, or the information provided on your electricity
                 bill, SolarforDairy can estimate the cost of installing solar panels on your farm. </p>
                 
-            <p> <h4>Why Install Solar Panels?</p></h4>
+             <h4>Why Install Solar Panels?</h4>
                 
             <ul class="reasons">
                 <li>Reduce/eliminate your electricity bills </li>
