--- a/questions.html
+++ b/questions.html
@@ -37,7 +37,7 @@
         </p>
         </div>
 
-    <main>
+
         <h1 class="faq-heading">Frequently Asked Questions</h1>
         <section class="faq-container">
             <div class="faq-one">
@@ -45,7 +45,7 @@
                 <h2 class="faq-page">Where can I install solar panels? </h2>
                 <!-- faq answer -->
                 <div class="faq-body">
-                    <p>Roofs of on-farm structures 
+                    <p>Roofs of on-farm structures </p>
                         <ul class=roofs>
                             <li>Make sure the building can bear the weight of the panels</li>
                         <li>South-facing roofs will produce the most energy</li>
@@ -53,19 +53,18 @@
                         <li>Panels should never be installed on the north side of a roof</li>
                         </ul>
 
-                        Pasture and non-arable land 
+                        <p>Pasture and non-arable land </p>
                         <ul class=nonarable>
                         <li>Make sure panels are high enough that cattle can go underneath it</li>
                         <li>Can provide shade for livestock</li>
                         <li>Makes non-arable land productive</li>
                         </ul>
 
-                        Arable land
+                        <p>Arable land</p>
                         <ul class="arable">
                         <li>Consider the spacing between and height of panels so that machinery can pass through</li>
                         <li>Panels can provide shade that is ideal for shade-loving crops</li>
                         </ul>
-                    </p>
                 </div>
             </div>
             <hr class="hr-line">
@@ -101,7 +100,6 @@
                 </div>
             </div>
         </section>
-    </main>
     <script src="main.js"></script>
 
 
