--- a/resources.html
+++ b/resources.html
@@ -37,12 +37,10 @@
         </p>
         </div>
 
-
-    <main>
         <div id="resourceHeader">
         <h2>Resources</h2>
         <p>Click on the following resources to expand the boxes and get more information!</p>
-      </div>
+        </div>
 
         <section class="resource-container">
             <div class="resource-one">
@@ -50,7 +48,7 @@
                 <h2 class="resource-page">How does solar work?</h2>
                 <!-- resource dropdown -->
                 <div class="resource-body">
-                    <p>This website by energy.gov explains how solar techology works, it provides detailed info about the following topics:
+                    <p>This website by energy.gov explains how solar techology works, it provides detailed info about the following topics:</p>
                         <ul>
                             <li>Solar energy 101</li>
                             <li>Photovoltaics basics</li>
@@ -59,7 +57,7 @@
                             <li>Soft cost basics</li>
                             <li>Going solar basics</li>
                             <li>Solar industry basics</li>
-                    </p>
+                        </ul>
                     <p><a href="https://www.energy.gov/eere/solar/how-does-solar-work">Click here to access the website</a> </p>
                 </div>
             </div>
@@ -77,7 +75,7 @@
                     <li>Understanding incentives</li>
                     <li>Conducting a financial analysis</li>
                     <li>A photovoltaic solar example</li>
-                    </ul></p><p><a href="https://www.canr.msu.edu/bioeconomy/solar-photovoltaic/agriculture-solar-electric-investment">Click here to access the webinar</a> </p>
+                    </ul><p><a href="https://www.canr.msu.edu/bioeconomy/solar-photovoltaic/agriculture-solar-electric-investment">Click here to access the webinar</a> </p>
                 </div>
             </div>
             <hr class="hr-line">
@@ -157,8 +155,6 @@
             </div>
         </section>
 
-
-    </main>
     <script src="main.js"></script>
 
 </body>
