new rows to loan

--- a/calculator.html
+++ b/calculator.html
@@ -194,6 +194,22 @@
     <td><span id="result27"></span></td>
     <td>dollars/month</td>
   </tr>
+  <tr title="This value is your estimated annual savings. This is the amount you would likely be paying on electricity per year if you did not have solar panels."> 
+    <td>Estimated Annual Electricity Savings</td>
+    <td><span id="result28"></span></td>
+    <td>dollars/year</td>
+  </tr>
+  <tr title="This value is the estimated savings each month. This value is calculated based on your estimated annual savings."> 
+    <td>Estimated Monthly Electricity Savings</td>
+    <td><span id="result29"></span></td>
+    <td>dollars/month</td>
+  </tr>
+  <tr title="This value is the average annual cash flow, which is the annual electricity savings minus the annual costs of maintenance, insurance, and depreciation."> 
+    <td>Estimated Annual Cash Flow</td>
+    <td><span id="result30"></span></td>
+    <td>dollars/year</td>
+  </tr>
+
   </table>
 
 
