--- a/calculator.html
+++ b/calculator.html
@@ -195,21 +195,20 @@
     <td>dollars/month</td>
   </tr>
   <tr title="This value is your estimated annual savings. This is the amount you would likely be paying on electricity per year if you did not have solar panels."> 
-    <td>Estimated Annual Electricity Savings</td>
+    <td>Average Annual Electricity Savings</td>
     <td><span id="result28"></span></td>
     <td>dollars/year</td>
   </tr>
-  <tr title="This value is the estimated savings each month. This value is calculated based on your estimated annual savings."> 
-    <td>Estimated Monthly Electricity Savings</td>
-    <td><span id="result29"></span></td>
-    <td>dollars/month</td>
-  </tr>
   <tr title="This value is the average annual cash flow, which is the annual electricity savings minus the annual costs of maintenance, insurance, and depreciation."> 
-    <td>Estimated Annual Cash Flow</td>
+    <td>Average Annual Cash Flow</td>
     <td><span id="result30"></span></td>
     <td>dollars/year</td>
   </tr>
-
+  <tr title="This is the average annual cash flow minus your annual loan payment. If this value is positive, you will be saving this much more money on this investment than you are spending."> 
+    <td>Annual Cash Flow minus Annual Loan Payment</td>
+    <td><span id="result31"></span></td>
+    <td>dollars/year</td>
+  </tr>
   </table>
 
 
