--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <li>As consumers are willing to pay more for sustainably produced food, the dairy industry is shifting toward sustainably produced dairy products </li>
             </ul>
 
-        <p><a href=http://maec.msu.edu/farmenergy/index.html>Back to Michigan Farm Energy Program</a></p> 
+        <p><a href=https://www.maec.msu.edu/mi-fep/about>Back to Michigan Farm Energy Program</a></p> 
     </div>
     
     <script src="main.js"></script>
