--- a/calculator.html
+++ b/calculator.html
@@ -70,7 +70,7 @@
 <div class="table-container1">
 <table class="table1">
   <tr><th colspan="3">User Input</th></tr>
-  <tr title="The number of cows is used to determine how much energy your farm needs to generate per year."> 
+  <tr title="The number of cows is used to determine how much energy your farm needs to generate per year. If you have less than 30 or more than 1600, please refresh the page and input your annual electricity consumption from your electric bill."> 
     <td>Number of Cows</td>
     <td><span id="result1"></span></td>
     <td>cows</td>
