loan cash flow graph

--- a/calculator.html
+++ b/calculator.html
@@ -217,6 +217,13 @@
   <canvas id="loanChart"></canvas>
 </div>
 
+<h3>Cash Flow Including Loan Payments</h3>
+<div class="loanCashFlowChartContainer">
+  <canvas id="loanCashFlowChart"></canvas>
+</div>
+
+
+
 </div>
     <script src="calculator.js"></script>
 </body>
