--- a/calculator.html
+++ b/calculator.html
@@ -39,7 +39,7 @@
 <div id="bodyOfCalculator">
     <div id="calculatorHeader">
         <h2>Solar Cost Calculator</h2>
-        <p>Disclaimer: The calculator on this website is intended for educational purposes only. The calculations are meant to illustrate the economic impact of investing in photovoltatic technology, not to be official financial guidance. Actual returns and values will vary. Farmers interested in installing photovoltaic products should consult with a professional before making any purchase or investment. </p>
+        <p><b>Disclaimer:</b> The calculator on this website is intended for educational purposes only. The calculations are meant to illustrate the economic impact of investing in photovoltatic technology, not to be official financial guidance. This calculator assumes normal weather patterns. It does not account for extreme weather conditions or variability among farmers such as level of mechanization, number of times cows are milked per day, and on-farm energy efficiency. Actual returns and values will vary. Farmers interested in installing photovoltaic products should consult with a professional before making any purchase or investment. </p>
       </div>
     
  <div id="farmerForm">
