--- a/funding.html
+++ b/funding.html
@@ -40,7 +40,7 @@
 
     <div class="body-text">
         <h2>Funding Options</h2>
-    <p>Disclaimer: This page is intended to provide an informational overview of funding options for farmers interested in installing solar panels. It is not intended to be official financial guidance. Farmers interested in installing photovoltaic products should consult with a licensed tax professional before making any purchase or investment. </p>
+    <p><b>Disclaimer:</b> This page is intended to provide an informational overview of funding options for farmers interested in installing solar panels. It is not intended to be official financial guidance. Farmers interested in installing photovoltaic products should consult with a licensed tax professional before making any purchase or investment. </p>
 
     </div>
     <div id="bodyOfFunding">
